ipc/ipdl/test/ipdl/error/array_Recursive.ipdl
//error: bad syntax near `['

[ChildProc=any]
protocol array_Recursive {
child: async Msg(int[][] aa);
};
